toolchains/typescript/tests/snapshots/sync_project_test__sync_project__sync_root_project_reference__works_with_root_dir.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(sandbox.path().join(\"root/tsconfig.json\")).unwrap()"
---
{
  "files": [],
  "references": [
    {
      "path": "../no-refs"
    }
  ]
}
