toolchains/typescript/tests/snapshots/sync_project_test__sync_project__sync_root_project_reference__works_with_root_level_project.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(sandbox.path().join(\"tsconfig.json\")).unwrap()"
---
{
  "files": [],
  "references": [
    {
      "path": "tsconfig.project.json"
    }
  ]
}
